<resources>
    <string name="app_name">Plantis</string>
    <string name="my_garden">My Garden</string>
    <string name="reminder_name">Reminder name</string>
    <string name="reminder_day">Reminder day</string>
    <string name="reminder_time">Reminder time</string>
    <string name="plant_name">Plant name</string>
    <string name="new_plant_name">New plant name</string>
    <string name="search">Search</string>
    <string name="dr_plantis">Dr Plantis</string>
    <string name="reminders">Reminders</string>
    <string name="tomar_foto">Start searching</string>
    <string name="siguiente">Next</string>
    <string name="see_results">See Results</string>
    <string name="Probabibilidad">Probability: %1$s</string>
    <string name="imagen_de_la_planta">Imagen de la planta</string>
    <string name="health_probability">Healthy probability: %1$s</string>
    <string name="probable_diseases">Probable diseases</string>
    <string name="treatments">treatments</string>
    <string name="search_description">Search among thousands of species!</string>
    <string name="explanation_how_to_take_photo">We recommend taking the photo in a bright environment and with as much detail as possible. By taking a good photo of the leaves we will be able to identify the plant. </string>
    <string name="explanation_how_to_take_photo_v2">We recommend taking the photo in the most affected area so that we can analyze it and identify the disease and its treatment.</string>
    <string name="plant_icon">plant_icon</string>
    <string name="take_another_photo">Take another photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diagnostic_text_button">Diagnostic</string>
    <string name="drPlantisDescription">Take a picture of the most affected part of your plant to get a diagnosis and treatment.</string>
    <string name="drPlantisTitle">Diagnostic your plant in seconds</string>
    <string name="no_avaliable_info">No available information</string>
</resources>