<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right"
            android:autoStart="true">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_icon_1"
                android:contentDescription="@string/plant_icon" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_icon_2"
                android:contentDescription="@string/plant_icon" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_icon_3"
                android:contentDescription="@string/plant_icon" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_icon_4"
                android:contentDescription="@string/plant_icon" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/search_icon_5"
                android:contentDescription="@string/plant_icon" />
        </ViewFlipper>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textAlignment="center"
            android:text="@string/search_description" />

        <TextView
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:text="@string/explanation_how_to_take_photo" />


        <Button
            android:id="@+id/search_button"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@color/brown"
            android:layout_marginTop="50dp"
            android:textColor="@color/eggshellWhite"
            android:text="@string/tomar_foto" />
    </LinearLayout>
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_my_garden"
        android:id="@+id/searchImageView"
        android:visibility="invisible"
        android:contentDescription="@string/plant_icon" />

    <Button
        android:id="@+id/next_button"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/siguiente"
        android:visibility="invisible" />
</FrameLayout>