<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.NewReminderFragment"
    android:background="@color/oliveGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:background="@drawable/background_floating_fragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_name"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/brown"
                android:focusable="false"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/lightGray">
            <EditText
                android:id="@+id/new_reminder_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                app:backgroundTint="@color/darkGray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_day"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/brown"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/lightGray">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">
                <ToggleButton
                    android:id="@+id/daypicker_sunday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:textOff="S"
                    android:textOn="S"
                    android:textStyle="bold"
                    style="@style/toggleButton"
                    android:background="@drawable/day_picker_toggle_background" />
                <ToggleButton
                    android:id="@+id/daypicker_monday"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textOff="M"
                    android:textOn="M"
                    android:textStyle="bold"
                    style="@style/toggleButton"
                    android:background="@drawable/day_picker_toggle_background" />
                <ToggleButton
                    android:id="@+id/daypicker_tuesday"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textOff="T"
                    android:textOn="T"
                    android:textStyle="bold"
                    style="@style/toggleButton"
                    android:background="@drawable/day_picker_toggle_background" />
                <ToggleButton
                    android:id="@+id/daypicker_wednesday"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textOff="W"
                    android:textOn="W"
                    android:textStyle="bold"
                    style="@style/toggleButton"
                    android:background="@drawable/day_picker_toggle_background" />
                <ToggleButton
                    android:id="@+id/daypicker_thursday"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textOff="T"
                    android:textOn="T"
                    android:textStyle="bold"
                    style="@style/toggleButton"
                    android:background="@drawable/day_picker_toggle_background" />
                <ToggleButton
                    android:id="@+id/daypicker_friday"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textOff="F"
                    android:textOn="F"
                    android:textStyle="bold"
                    style="@style/toggleButton"
                    android:background="@drawable/day_picker_toggle_background" />
                <ToggleButton
                    android:id="@+id/daypicker_saturdat"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:textOff="S"
                    android:textOn="S"
                    android:textStyle="bold"
                    style="@style/toggleButton"
                    android:background="@drawable/day_picker_toggle_background" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reminder_time"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/brown"
                android:focusable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageButton
                android:id="@+id/new_reminder_time_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:clickable="true"
                android:focusable="true"
                android:bottomRightRadius="8dp"
                android:bottomLeftRadius="8dp"
                android:topRightRadius="8dp"
                android:topLeftRadius="8dp"
                android:src="@drawable/ic_baseline_more_time_24" />
            <TextView
                android:id="@+id/new_reminder_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="00:00"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/cancel_new_reminder_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="CANCEL" />
            <Button
                android:id="@+id/ok_new_reminder_button"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:text="OK" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>